--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
+body.modal-open {
+    overflow: hidden;
+}
+
 dialog#modal-dialog {
     position: fixed;
     z-index: 10000;
-    top: 50%;
+    top: 0;
     left: 50%;
+    width: 80%;
     max-width: 80%;
     padding: 20px;
     transform: translate(-50%, -50%);
     border: 1px solid #ccc;
-    background: #ffffff;
+    background: #fff;
 }
 
 dialog#modal-dialog:not([open]) {
