--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body.modal-open {
 dialog#modal-dialog {
     position: fixed;
     z-index: 10000;
-    top: 50%;
+    top: 0;
     left: 50%;
     width: 80%;
     max-width: 80%;
