--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -1,21 +1,25 @@
 .wrap {
-    max-width: 60%;
-    margin: 0 auto;
+  max-width: 60%;
+  margin: 0 auto;
 }
-
-.wrap input[type="text"],
+.wrap input[type=text] {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+}
 .wrap textarea {
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px;
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+}
+.wrap input[type=submit] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
+  color: #fff;
+  border: none;
+  background-color: #0073aa;
 }
 
-.wrap input[type="submit"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    cursor: pointer;
-    color: #fff;
-    border: none;
-    background-color: #0073aa;
-}
+/*# sourceMappingURL=admin-style.css.map */
